# clutha

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: aarch64-build.yml  arm32-build.yml  rust-build.yml  rust-clippy.yml  rust-fmt.yml  rust-tests.yml
prompts/: about.txt  cluthor.txt  default.txt
src/: bot.rs  channel.rs  commands.rs  dialogue.rs  discord.rs  gemini.rs  main.rs  prompt.rs
src/backend/: mod.rs
src/backend/chatgpt/: mod.rs  model.rs
src/backend/gemini/: mod.rs  model.rs
src/gemini/: mod.rs  model.rs
