[package]
name = "clutha"
version = "0.4.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = "0.12.0"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Need this for cross-compiling, but it doesn't work on Windows
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
