[package]
name = "clutha"
version = "0.6.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
itertools = "0.12.1"
poise = "0.6.1"
reqwest = "0.12.28"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = "0.12.0"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Need this for cross-compiling, but it doesn't work on Windows
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
